@@ -41,7 +41,6 @@ import java.util.Comparator;
 import java.util.Map;
 import java.util.Optional;
 import java.util.TreeMap;
-import java.util.stream.Collectors;
 
 /**
  * Raw, un-cached transformations.
@@ -66,14 +65,14 @@ public class SpongeTransmogrifier {
                 return new DirectionalProperty(propertyName,
                     ((net.minecraft.world.level.block.state.properties.EnumProperty<?>) nativeProperty).getPossibleValues().stream()
                         .map(x -> adaptDirection((net.minecraft.core.Direction) x))
-                        .collect(Collectors.toList())
+                        .toList()
                 );
             }
             if (nativeProperty instanceof net.minecraft.world.level.block.state.properties.EnumProperty) {
                 return new EnumProperty(propertyName,
                     ((net.minecraft.world.level.block.state.properties.EnumProperty<?>) nativeProperty).getPossibleValues().stream()
                         .map(StringRepresentable::getSerializedName)
-                        .collect(Collectors.toList()));
+                        .toList());
             }
             throw new IllegalStateException("Unknown property type");
         }
